--- a/cart.html
+++ b/cart.html
@@ -2,204 +2,270 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
-    <link rel="stylesheet" href="./cart.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="font-fontawesome-ae333ffef2.js"></script>
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+    body {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    * {
+        margin: 0 auto;
+        box-sizing: border-box;
+        padding: 0;
+    }
+
+    .container {
+        max-width: 1440px;
+    }
+
+    header {
+        height: 100px;
+        background-color: rgb(255, 255, 255);
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+
+    }
+
+    hr {
+        border-color: black;
+        border-width: 0.1px;
+    }
+
+    .logoHeader {
+        display: flex;
+    }
+
+    .logoHeader p {
+        font-size: x-large;
+        font-weight: bolder;
+    }
+
+    .menu ul {
+        margin-left: 100px;
+        display: flex;
+    }
+
+    .menu ul li {
+        margin: 20px;
+        list-style: none;
+    }
+
+    .menu ul li a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .iconNavigate i {
+        margin: 20px;
+    }
+    main{
+        display: flex;
+        max-width: 85%;
+        margin-top: 50px;
+    }
+    .box-left{
+        width: 65%;
+    }
+    .box-right{
+        width: 35%;
+        margin-left: 60px;
+        background-color: #F9F1E7;
+        height: 400px;
+        line-height: 50px
+    }
+    table{
+        border-collapse: collapse;
+        text-align: center;
+    }
+    thead{
+        background-color: #F9F1E7;     
+        height: 55px;
+    }
+    table thead th{
+        font-size: 16px;
+    }
+    tbody td{
+       padding-top: 50px;
+    }
+    .subtotal, .total{
+        display: flex;
+    }
+    .box-right button{
+        width: 220px;
+        height: 60px;
+        border-radius: 15px;
+        font-size: 20px;
+        font-weight: 400;
+        margin-left: 90px;
+        margin-top: 50px;
+        background-color: #F9F1E7;
+    }
+    .price{
+        color: #9F9F9F;
+    }
+    .price-total{
+        color: #B88E2F;
+        font-size: 20px;
+        font-weight: 500;
+    }
+    .subtotal{
+        margin-top: 50px;
+    }
+    .services {
+        margin-top: 50px;
+        display: flex;
+        height: 270px;
+        background-color: #FAF3EA;
+        align-items: center;
+    }
+
+    .services img {
+        height: 70px;
+    }
+
+    footer {
+        display: flex;
+        margin-top: 30px;
+        line-height: 50px;
+        font-weight: 500;
+    }
+
+    .copyright {
+        width: 92%;
+    }
+
+    .title-footer {
+        font-weight: 700;
+        font-size: 24px;
+    }
+
+    .newletter input,.newletter
+    button {
+        outline: none;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        margin: 10px;
+    }
+
+    input::placeholder {
+        font-weight: 400;
+        color: #9F9F9F;
+    }
+</style>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header-inner">
-                <a href="" class="header__logo">
-                    <img src="./assets/logo.svg" alt="" />
-                </a>
-                <div class="button-mobile"><button>=</button></div>
-                <nav class="main-menu">
-                    <ul class="main-menu__list">
-                        <li class="main-menu__item">
-                            <a href="home.html" class="main-menu__link">Home</a>
-                        </li>
-                        <li class="main-menu__item">
-                            <a href="shop.html" class="main-menu__link">Shop</a>
-                        </li>
-                        <li class="main-menu__item">
-                            <a href="" class="main-menu__link">About</a>
-                        </li>
-                        <li class="main-menu__item">
-                            <a href="" class="main-menu__link">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="header-items">
-                    <div class="header-item-user">
-                        <span><img src="./assets/icons/1.svg" /></span>
-                    </div>
-                    <div class="header-item-user">
-                        <span><img src="./assets/icons/2.svg" /></span>
-                    </div>
-                    <div class="header-item-user">
-                        <span><img src="./assets/icons/3.svg" /></span>
-                    </div>
-                    <div class="header-item-user">
-                        <span><img src="./assets/icons/4.svg" /></span>
-                    </div>
+    <div class="container">
+        <header>
+            <div class="menuBar">
+                <div class="logoHeader">
+                    <a href="">
+                        <img src="/images/Meubel House_Logos-05.png" alt="">
+                    </a>
+                    <p class="logo-text">Furniro</p>
                 </div>
             </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+            <div class="iconNavigate">
+                <i class="fa-regular fa-user"></i>
+                <i class="fas fa-search"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fas fa-shopping-cart"></i>
+            </div>
+        </header>
+        <div class="banner">
+            <img src="images/Group 78.png" alt="">
         </div>
-    </header>
-    <section class="banner">
-        <img src="https://picsum.photos/id/10/1440/500" alt="" class="banner__img" />
-    </section>
-
-    <section class="cart">
-        <div class="container cart-container">
-            <!-- Cart Items -->
-            <div class="cart-details">
-                <div class="cart-item">
-                    <div class="cart-item-image">
-                        <img src="https://picsum.photos/id/8/80/80" alt="Asgaard Sofa">
-                    </div>
-                    <div class="cart-item-info">
-                        <p class="cart-item-title">Asgaard sofa</p>
-                        <span class="cart-item-price">25.000.000đ</span>
-                        <div class="cart-item-quantity">
-                            <button class="quantity-decrease">-</button>
-                            <input type="number" value="1" class="quantity-input">
-                            <button class="quantity-increase">+</button>
-                        </div>
-                        <span class="cart-item-subtotal">25.000.000đ</span>
-                    </div>
-                    <button class="cart-item-remove">🗑️</button>
-                </div>
+        <main>
+            <div class="box-left">
+                <table>
+                    <thead>
+                        <th style="width: 15%;"></th>
+                        <th style="width: 15%;">Product</th>
+                        <th style="width: 20%;">Price</th>
+                        <th style="width: 20%;">Quantity</th>
+                        <th style="width: 10%;">Subtotal</th>
+                        <th style="width: 10%;"></th>
+                    </thead>
+                    <tbody>
+                        <td>
+                            <img src="/images/Group 146.png" alt="" >
+                        </td>
+                        <td style="color: #9F9F9F;">Asgaard sofa</td>
+                        <td style="color: #9F9F9F;">25.000.000đ</td>
+                        <td>
+                           1
+                        </td>
+                        <td>25.000.000đ</td>
+                        <td><i class="fa-solid fa-trash" style="color: red;"></i></td>
+                    </tbody>
+                </table>
             </div>
-
-            <!-- Cart Totals -->
-            <div class="cart-summary">
-                <a href="./bill.html"><h3  class="cart-summary-title">Cart Totals</h3></a>
-                <div class="cart-summary-item">
-                    <span>Subtotal</span>
-                    <span class="cart-summary-value">25.000.000đ</span>
+            <div class="box-right">
+                <div class="title">
+                    <h2 style="text-align: center;margin-top: 20px;">Cart Totals</h2>
                 </div>
-                <div class="cart-summary-item">
-                    <span>Total</span>
-                    <span class="cart-summary-value">25.000.000đ</span>
+                <div class="subtotal">
+                    <p>Subtotal</p>
+                    <p class="price">25.000.000đ</p>
                 </div>
-                <button class="cart-summary-checkout" id="checkout">Check Out</button>
-
+                <div class="total">
+                    <p>Total</p>
+                    <p class="price-total">25.000.000đ</p>
+                </div>
+                <button>Check Out</button>
             </div>
+        </main>
+        <div class="services">
+            <img src="/images/Frame 5.png" alt=""  style="width: 337px;">
+            <img src="/images/Frame 19.png" alt="" style="width: 328px;">
+            <img src="/images/Frame 2.png" alt="" style="width: 244px;">
+            <img src="/images/Frame 4.png" alt="" style="width: 259px;">
         </div>
-    </section>
-    <!--End cart-->
-    <section class="services">
-        <div class="container-fluid">
-            <div class="service-list">
-                <div class="service-item">
-                    <img src="./assets/icons/10.svg" class="service__image" />
-                    <div class="service-info">
-                        <h4 class="service__name">High Quality</h4>
-                        <p class="service__description">crafted from top materials</p>
-                    </div>
-                </div>
-                <!--End service-item-->
-                <div class="service-item">
-                    <img src="./assets/icons/11.svg" class="service__image" />
-                    <div class="service-info">
-                        <h4 class="service__name">High Quality</h4>
-                        <p class="service__description">crafted from top materials</p>
-                    </div>
-                </div>
-                <!--End service-item-->
-                <div class="service-item">
-                    <img src="./assets/icons/12.svg" class="service__image" />
-                    <div class="service-info">
-                        <h4 class="service__name">High Quality</h4>
-                        <p class="service__description">crafted from top materials</p>
-                    </div>
-                </div>
-                <!--End service-item-->
-                <div class="service-item">
-                    <img src="./assets/icons/13.svg" class="service__image" />
-                    <div class="service-info">
-                        <h4 class="service__name">High Quality</h4>
-                        <p class="service__description">crafted from top materials</p>
-                    </div>
-                </div>
-                <!--End service-item-->
+        <footer>
+            <div class="company">
+             <p class="title-footer">Funiro.</p>
+             <p>400 University Drive Suite 200 Coral <br> Gables,<br>
+                 FL 33134 USA</p>
             </div>
-        </div>
-    </section>
-    <!--End .services-->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-list">
-                <div class="footer-item">
-                    <img src="./assets/logo.svg" alt="" />
-                    <p class="footer__address">
-                        400 University Drive Suite 200 Coral Gables, FL 33134 USA
-                    </p>
-                </div>
-                <div class="footer-nav">
-                    <div class="footer-item">
-                        <h2 class="footer__title">Links</h2>
-                        <ul class="footer-menu-list">
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Home</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Shop</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Blog</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-item">
-                        <h2 class="footer__title">Help</h2>
-                        <ul class="footer-menu-list">
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Payment Options</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Returns</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Privacy Policies</a>
-                            </li>
-                            <li class="footer-menu-item">
-                                <a href="" class="footer-menu-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer-item">
-                    <h2 class="footer__title">Newsletter</h2>
-                    <form action="" class="newsletter">
-                        <input type="text" class="newsletter__input" placeholder="Enter Your Email Address" />
-                        <button class="newsletter__btn">Subscribe</button>
-                    </form>
-                </div>
+            <div class="links">
+             <p style="color: #9F9F9F;">Links</p>
+             <p>Home</p>
+             <p>Shop</p>
+             <p>About</p>
+             <p>Contact</p>
             </div>
-            <p class="copyright">2023 furino. All rights reverved</p>
+            <div class="help">
+             <p style="color: #9F9F9F;">Help</p>
+             <p>Payment Options</p>
+             <p>Returns</p>
+             <p>Privacy Policies</p>
+            </div>
+            <div class="newletter">
+             <p style="color: #9F9F9F;">Newsletter</p>
+             <input type="text" placeholder="Enter Your Email Address">
+             <button>SUBSCRIBE</button>
+            </div>         
+         </footer>
+        <div class="copyright" >
+         <hr style="color: #D9D9D9;margin-top: 50px;">
+         <p style="margin-top: 30px;margin-bottom: 50px;">2023 furino. All rights reverved</p>
         </div>
-    </footer>
-    <script>
-        document.getElementById('checkout').addEventListener('click', function () {
-            window.location.href = './bill.html';
-        });
-    </script>
-
+    </div>
 </body>
 
 </html>
