--- a/checkout.html
+++ b/checkout.html
@@ -227,7 +227,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">Shop</a></li>
-                    <li><a href="checkout.html">About</a></li>
+                    <li><a href="detail.html">About</a></li>
                     <li><a href="cart.html">Contact</a></li>
                 </ul>
             </div>
