--- a/detail.html
+++ b/detail.html
@@ -98,7 +98,8 @@
                             <div class="plus"><i class="fa-solid fa-plus"></i></div>
                         </div>
                         <div class="add">
-                            <p>Add To Cart</p>
+                            <p onclick="window.location.href='cart.html'">Add To Cart</p>
+
                         </div>
                         <div class="compare">
                             <p>Compare</p>
