--- a/product.html
+++ b/product.html
@@ -264,7 +264,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">Shop</a></li>
-                    <li><a href="checkout.html">About</a></li>
+                    <li><a href="detail.html">About</a></li>
                     <li><a href="cart.html">Contact</a></li>
                 </ul>
             </div>
@@ -313,8 +313,8 @@
                     </div>
                     <div class="overlay">
                         <div class="overlay-content">
-                            <a href="#" style="background-color: #fff;">View Product</a>
-                            <a href="#" style="background-color: #fff;">Add to Cart</a>
+                            <a href="detail.html" style="background-color: #fff;">View Product</a>
+                            <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
                             <div class="secondary-buttons">
                                 <a href="#"><i class="fa-solid fa-share"></i> Share</a>
                                 <a href="#"><i class="fa-solid fa-code-compare"></i> Compare</a>
@@ -365,8 +365,8 @@
                     </div>
                     <div class="overlay">
                         <div class="overlay-content">
-                            <a href="#" style="background-color: #fff;">View Product</a>
-                            <a href="#" style="background-color: #fff;">Add to Cart</a>
+                            <a href="detail.html" style="background-color: #fff;">View Product</a>
+                            <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
                             <div class="secondary-buttons">
                                 <a href="#"><i class="fa-solid fa-share"></i>Share</a>
                                 <a href="#"><i class="fa-solid fa-code-compare"></i>Compare</a>
