--- a/cart.html
+++ b/cart.html
@@ -65,39 +65,49 @@
     .iconNavigate i {
         margin: 20px;
     }
-    main{
+
+    main {
         display: flex;
         max-width: 85%;
         margin-top: 50px;
     }
-    .box-left{
+
+    .box-left {
         width: 65%;
     }
-    .box-right{
+
+    .box-right {
         width: 35%;
         margin-left: 60px;
         background-color: #F9F1E7;
         height: 400px;
         line-height: 50px
     }
-    table{
+
+    table {
         border-collapse: collapse;
         text-align: center;
     }
-    thead{
-        background-color: #F9F1E7;     
+
+    thead {
+        background-color: #F9F1E7;
         height: 55px;
     }
-    table thead th{
+
+    table thead th {
         font-size: 16px;
     }
-    tbody td{
-       padding-top: 50px;
+
+    tbody td {
+        padding-top: 50px;
     }
-    .subtotal, .total{
+
+    .subtotal,
+    .total {
         display: flex;
     }
-    .box-right button{
+
+    .box-right button {
         width: 220px;
         height: 60px;
         border-radius: 15px;
@@ -107,17 +117,21 @@
         margin-top: 50px;
         background-color: #F9F1E7;
     }
-    .price{
+
+    .price {
         color: #9F9F9F;
     }
-    .price-total{
+
+    .price-total {
         color: #B88E2F;
         font-size: 20px;
         font-weight: 500;
     }
-    .subtotal{
+
+    .subtotal {
         margin-top: 50px;
     }
+
     .services {
         margin-top: 50px;
         display: flex;
@@ -146,8 +160,8 @@
         font-size: 24px;
     }
 
-    .newletter input,.newletter
-    button {
+    .newletter input,
+    .newletter button {
         outline: none;
         border-top: none;
         border-left: none;
@@ -174,10 +188,10 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Shop</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="product.html">Shop</a></li>
+                    <li><a href="detail.html">About</a></li>
+                    <li><a href="cart.html">Contact</a></li>
                 </ul>
             </div>
             <div class="iconNavigate">
@@ -203,12 +217,12 @@
                     </thead>
                     <tbody>
                         <td>
-                            <img src="/images/Group 146.png" alt="" >
+                            <img src="/images/Group 146.png" alt="">
                         </td>
                         <td style="color: #9F9F9F;">Asgaard sofa</td>
                         <td style="color: #9F9F9F;">25.000.000đ</td>
                         <td>
-                           1
+                            1
                         </td>
                         <td>25.000.000đ</td>
                         <td><i class="fa-solid fa-trash" style="color: red;"></i></td>
@@ -227,43 +241,43 @@
                     <p>Total</p>
                     <p class="price-total">25.000.000đ</p>
                 </div>
-                <button>Check Out</button>
+                <button onclick="window.location.href='checkout.html'">Check Out</button>
             </div>
         </main>
         <div class="services">
-            <img src="/images/Frame 5.png" alt=""  style="width: 337px;">
+            <img src="/images/Frame 5.png" alt="" style="width: 337px;">
             <img src="/images/Frame 19.png" alt="" style="width: 328px;">
             <img src="/images/Frame 2.png" alt="" style="width: 244px;">
             <img src="/images/Frame 4.png" alt="" style="width: 259px;">
         </div>
         <footer>
             <div class="company">
-             <p class="title-footer">Funiro.</p>
-             <p>400 University Drive Suite 200 Coral <br> Gables,<br>
-                 FL 33134 USA</p>
+                <p class="title-footer">Funiro.</p>
+                <p>400 University Drive Suite 200 Coral <br> Gables,<br>
+                    FL 33134 USA</p>
             </div>
             <div class="links">
-             <p style="color: #9F9F9F;">Links</p>
-             <p>Home</p>
-             <p>Shop</p>
-             <p>About</p>
-             <p>Contact</p>
+                <p style="color: #9F9F9F;">Links</p>
+                <p>Home</p>
+                <p>Shop</p>
+                <p>About</p>
+                <p>Contact</p>
             </div>
             <div class="help">
-             <p style="color: #9F9F9F;">Help</p>
-             <p>Payment Options</p>
-             <p>Returns</p>
-             <p>Privacy Policies</p>
+                <p style="color: #9F9F9F;">Help</p>
+                <p>Payment Options</p>
+                <p>Returns</p>
+                <p>Privacy Policies</p>
             </div>
             <div class="newletter">
-             <p style="color: #9F9F9F;">Newsletter</p>
-             <input type="text" placeholder="Enter Your Email Address">
-             <button>SUBSCRIBE</button>
-            </div>         
-         </footer>
-        <div class="copyright" >
-         <hr style="color: #D9D9D9;margin-top: 50px;">
-         <p style="margin-top: 30px;margin-bottom: 50px;">2023 furino. All rights reverved</p>
+                <p style="color: #9F9F9F;">Newsletter</p>
+                <input type="text" placeholder="Enter Your Email Address">
+                <button>SUBSCRIBE</button>
+            </div>
+        </footer>
+        <div class="copyright">
+            <hr style="color: #D9D9D9;margin-top: 50px;">
+            <p style="margin-top: 30px;margin-bottom: 50px;">2023 furino. All rights reverved</p>
         </div>
     </div>
 </body>
