--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">Shop</a></li>
-                    <li><a href="checkout.html">About</a></li>
+                    <li><a href="detail.html">About</a></li>
                     <li><a href="cart.html">Contact</a></li>
                 </ul>
             </div>
@@ -61,8 +61,8 @@
                         </div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <a href="#" style="background-color: #fff;">View Product</a>
-                                <a href="#" style="background-color: #fff;">Add to Cart</a>
+                                <a href="detail.html" style="background-color: #fff;">View Product</a>
+                                <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
                                 <div class="secondary-buttons">
                                     <a href="#"><i class="fa-solid fa-share"></i> Share</a>
                                     <a href="#"><i class="fa-solid fa-code-compare"></i> Compare</a>
@@ -87,8 +87,9 @@
                         </div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <a href="#" style="background-color: #fff;">View Product</a>
-                                <a href="#" style="background-color: #fff;">Add to Cart</a>
+                                <a href="detail.html" style="background-color: #fff;">View Product</a>
+                                <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
+
                                 <div class="secondary-buttons">
                                     <a href="#"><i class="fa-solid fa-share"></i> Share</a>
                                     <a href="#"><i class="fa-solid fa-code-compare"></i> Compare</a>
@@ -113,8 +114,8 @@
                         </div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <a href="#" style="background-color: #fff;">View Product</a>
-                                <a href="#" style="background-color: #fff;">Add to Cart</a>
+                                <a href="detail.html" style="background-color: #fff;">View Product</a>
+                                <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
                                 <div class="secondary-buttons">
                                     <a href="#"><i class="fa-solid fa-share"></i> Share</a>
                                     <a href="#"><i class="fa-solid fa-code-compare"></i> Compare</a>
@@ -139,8 +140,8 @@
                         </div>
                         <div class="overlay">
                             <div class="overlay-content">
-                                <a href="#" style="background-color: #fff;">View Product</a>
-                                <a href="#" style="background-color: #fff;">Add to Cart</a>
+                                <a href="detail.html" style="background-color: #fff;">View Product</a>
+                                <a href="cart.html" style="background-color: #fff;">Add to Cart</a>
                                 <div class="secondary-buttons">
                                     <a href="#"><i class="fa-solid fa-share"></i> Share</a>
                                     <a href="#"><i class="fa-solid fa-code-compare"></i> Compare</a>
@@ -225,41 +226,41 @@
             </div>
         </main>
         <div class="services">
-            <img src="/images/Frame 5.png" alt=""  style="width: 337px;">
+            <img src="/images/Frame 5.png" alt="" style="width: 337px;">
             <img src="/images/Frame 19.png" alt="" style="width: 328px;">
             <img src="/images/Frame 2.png" alt="" style="width: 244px;">
             <img src="/images/Frame 4.png" alt="" style="width: 259px;">
         </div>
         <footer>
             <div class="company">
-             <p class="title-footer">Funiro.</p>
-             <p>400 University Drive Suite 200 Coral <br> Gables,<br>
-                 FL 33134 USA</p>
+                <p class="title-footer">Funiro.</p>
+                <p>400 University Drive Suite 200 Coral <br> Gables,<br>
+                    FL 33134 USA</p>
             </div>
             <div class="links">
-             <p style="color: #9F9F9F;">Links</p>
-             <p>Home</p>
-             <p>Shop</p>
-             <p>About</p>
-             <p>Contact</p>
+                <p style="color: #9F9F9F;">Links</p>
+                <p>Home</p>
+                <p>Shop</p>
+                <p>About</p>
+                <p>Contact</p>
             </div>
             <div class="help">
-             <p style="color: #9F9F9F;">Help</p>
-             <p>Payment Options</p>
-             <p>Returns</p>
-             <p>Privacy Policies</p>
+                <p style="color: #9F9F9F;">Help</p>
+                <p>Payment Options</p>
+                <p>Returns</p>
+                <p>Privacy Policies</p>
             </div>
             <div class="newletter">
-             <p style="color: #9F9F9F;">Newsletter</p>
-             <input type="text" placeholder="Enter Your Email Address">
-             <button>SUBSCRIBE</button>
-            </div>         
-         </footer>
-        <div class="copyright" >
-         <hr style="color: #D9D9D9;margin-top: 50px;">
-         <p style="margin-top: 30px;margin-bottom: 50px;">2023 furino. All rights reverved</p>
+                <p style="color: #9F9F9F;">Newsletter</p>
+                <input type="text" placeholder="Enter Your Email Address">
+                <button>SUBSCRIBE</button>
+            </div>
+        </footer>
+        <div class="copyright">
+            <hr style="color: #D9D9D9;margin-top: 50px;">
+            <p style="margin-top: 30px;margin-bottom: 50px;">2023 furino. All rights reverved</p>
         </div>
-     </div>
+    </div>
 </body>
 
 </html>
